# netwatching

./: .gitignore  Cargo.toml  client.yaml  server.yaml
netwatching-client/: Cargo.toml
netwatching-client/src/: main.rs
netwatching-common/: Cargo.toml
netwatching-common/src/: lib.rs
netwatching-server/: Cargo.toml
netwatching-server/src/: main.rs
