
[package]
name = "netwatching-client"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
anyhow = { version = "1.0.70", features = ["std", "backtrace"] }
bincode = "1.3.3"
chrono = { version = "0.4.24", features = ["serde"] }
config = "0.13.3"
ctor = "0.2.0"
env_logger = "0.10.0"
log = "0.4.17"
netwatching-common = { path = "../netwatching-common" }
serde = "1.0.159"
tokio = { version = "1.27.0", features = ["macros", "rt", "rt-multi-thread", "net", "time"] }
